infra/k8s/login-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          image: login
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: login-srv
spec:
  selector:
    app: login
  ports:
    - name: login
      protocol: TCP
      port: 3000
      targetPort: 3000
