infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-conexa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  -  http:
      paths:
        - path: /api/v1/.*
          pathType: Prefix
          backend:
            service:
              name: login-srv
              port:
                number: 3000
        - path: /api/v1/auth(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-srv
              port:
                number: 3000
